CFN-564(DBClusterParameterGroup) - Fix DBClusterParameterGroup not resetting parameters
cr: https://code.amazon.com/reviews/CR-161170481